--- a/templates/views/lecturer/TimeAvailable.html
+++ b/templates/views/lecturer/TimeAvailable.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} | Reschedule approval {% endblock title %}
+{% block title %} | Timeslots {% endblock title %}
 <!--TODO-->
 
 {% block content %}
@@ -12,72 +12,42 @@
                 arrow_back_ios_new
             </span>
         </a>
-        <div class="col d-block pe-3 me-3">
+        <div class="col d-block ps-4 ms-4">
             <p class="fs-3 fw-medium mb-0 text-center">
-                Reschedule
+                My Timeslots
             </p>
             <div class="d-md-none d-flex justify-content-center w-100">
                 <div class="border border-secondary border-1 w-50 mt-1"></div>
             </div>
         </div>
+        <button role="button" id="saveTimeslots"
+            class="btn d-flex align-items-center border border-0 justify-content-center bg-light-subtle border border-1"
+            style="width: 125px;"><span class="material-symbols-outlined">save</span>Save</button>
     </div>
     <div class="container mt-3" style="height: 100vh;">
-        <div class="d-flex flex-column gap-3">
-            <div class="row">
-                <p class="fw-medium">
-                    Old appointment details
-                </p>
-                <div class="row">
-                    <p class="fw-medium">
-                        Time
-                    </p>
-                    <p class="fw-lighter">
-                        {{ appointment.appointment_timeslot }}
-                    </p>
-                </div>
-                <div class="row">
-                    <p class="fw-medium">
-                        Reason for appointment
-                    </p>
-                    <p class="fw-lighter">
-                        {{ appointment.appointment_reason }}
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <p class="fw-medium">
-                    New appointment details
-                </p>
-                <sessionpicker ref="sp" :module="selectedModule"></sessionpicker>
-            </div>
-            <div class="row">
-                <label for="rescheduleReason" class="form-label fw-medium">Reason for reschedule</label>
-                <textarea class="form-control" id="rescheduleReason" rows="3"></textarea>
-            </div>
-            <div class="row">
-                <button id="reschedule_button" role="button" class="btn bg-success-subtle rounded">
-                    Reschedule
-                </button>
-            </div>
-        </div>
+        <schedule-component ref="sc" :staff_number="'{{current_user.lecturer.staff_number}}'"></schedule-component>
     </div>
+
 </div>
 {% endblock %}
 
 {% block script %}
 <script src="/static/custom.js" type="text/javascript"></script>
 <script type="text/javascript">
-    const collect_submit = document.getElementById('reschedule_button');
 
-    document.addEventListener('DOMContentLoaded', () => {
-        console.log('{{appointment.module_code}}');
-        app._instance.data.selectedModule = '{{appointment.module_code}}';
-    });
+    const saveTimeslots = document.getElementById("saveTimeslots");
 
-    const appendAlert = (message, type) => {
-        const wrapper = document.querySelector("div#toast-area");
-        wrapper.innerHTML = [
-            `<div class="toast align-items-center bg-${type} text-white position-relative border-0"
+    saveTimeslots.addEventListener('click', () => {
+        const days = app._instance.refs.sc.days;
+        const staged_for_removal = app._instance.refs.sc.removalStaging;
+        const staff_number = app._instance.refs.sc.staff_number;
+
+        console.log({ days, staged_for_removal, staff_number });
+
+        const appendAlert = (message, type) => {
+            const wrapper = document.querySelector("div#toast-area");
+            wrapper.innerHTML = [
+                `<div class="toast align-items-center bg-${type} text-white position-relative border-0"
                 role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="d-flex">
                     <div class="toast-body">
@@ -87,25 +57,17 @@
                         aria-label="Close"></button>
                 </div>
             </div>`
-        ].join('');
-    };
+            ].join('');
+        };
 
-    collect_submit.addEventListener('click', () => {
-        const appointment_timeslot_id = app._instance.refs.sp.selectedTime;
-        const appointment_reason = document.getElementById("rescheduleReason").value;
-        const appointment_date = app._instance.refs.sp.selectedDay;
-
-        const form_data = { appointment_timeslot_id, appointment_reason, appointment_date };
-
-        if (appointment_timeslot_id && appointment_reason && appointment_date) {
-            console.log(form_data);
-            const endpoint = window.location.pathname;
+        if (days && staff_number) {
+            const endpoint = "/v1/api/update_timeslots_by_staff_number";
             const requestOptions = {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify(form_data)
+                body: JSON.stringify({ days, staged_for_removal, staff_number })
             };
 
             fetch(endpoint, requestOptions)
@@ -124,7 +86,7 @@
                             toastBootstrap.show()
                         };
                     } else if (data.code === 1) {
-                        window.location.assign("/redirect-proxy");
+                        window.location.assign("/lecturer?tag=Upcoming")
                     }
                 })
                 .catch(error => {
@@ -137,7 +99,7 @@
                     };
                 });
         } else {
-            appendAlert(`Please fill in all the fields.`, 'warning');
+            appendAlert(`Nothing to update.`, 'info');
             const toastItem = document.querySelector("div.toast");
             if (toastItem) {
                 const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastItem);
@@ -145,5 +107,6 @@
             };
         }
     });
+
 </script>
 {% endblock %}
