--- a/templates/views/lecturer/partial/Upcoming.html
+++ b/templates/views/lecturer/partial/Upcoming.html
@@ -1,7 +1,19 @@
 {% extends "views/lecturer/Dashboard.html" %}
 {% block partial %}
 <div class="row">
-    <div class="container mt-3">
+    <div class="container my-3">
+        <a class="btn rounded-circle text-success border border-0" href="{{url_for('lecturer_route.lecturer_timeslots')}}">
+            <span class="d-flex material-symbols-outlined fs-1 justify-content-center align-items-center">
+                more_time
+            </span>
+            <div>Timeslots</div>
+        </a>
+        <a class="btn rounded-circle text-success border border-0" href="{{url_for('lecturer_route.lecturer_manage')}}">
+            <span class="d-flex material-symbols-outlined fs-1 justify-content-center align-items-center">
+                list
+            </span>
+            <div>Modules</div>
+        </a>
         <div class="row-col-3">
             <a role="button" class="btn rounded-pill bg-success-subtle" href="/lecturer?tag=Upcoming">Upcoming</a>
             <a role="button" class="btn rounded-pill border-success-subtle" href="/lecturer?tag=Pending">Pending</a>
