--- a/templates/views/student/partial/Pending.html
+++ b/templates/views/student/partial/Pending.html
@@ -1,7 +1,7 @@
 {% extends "views/student/Dashboard.html" %}
 {% block partial %}
 <div class="row">
-    <div class="container mt-3">
+    <div class="container my-3">
         <a class="btn rounded-circle text-success border border-0" href="{{url_for('student_route.book')}}">
             <span class="d-flex material-symbols-outlined fs-1 justify-content-center align-items-center">
                 calendar_add_on
