--- a/templates/views/RescheduleAppointment.html
+++ b/templates/views/RescheduleAppointment.html
@@ -29,6 +29,14 @@
                 </p>
                 <div class="row">
                     <p class="fw-medium">
+                        Date
+                    </p>
+                    <p class="fw-lighter">
+                        {{ appointment.date }}
+                    </p>
+                </div>
+                <div class="row">
+                    <p class="fw-medium">
                         Time
                     </p>
                     <p class="fw-lighter">
